changes to improve ui